<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drone News</string>
    <string name="app_description">Tracking CIA drone strikes in Pakistan, Yemen and Somalia</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0</string>
    <string name="app_copyright">Copyright 2014 Inderjit Gill</string>
    <string name="app_thanks">Thanks to The Bureau of Investigative Journalism and Josh Begley</string>

    <string name="about_label_thanks">thanks</string>
    <string name="about_label_license">license</string>
    <string name="about_label_third_party_libraries">third party libraries</string>
    <string name="about_label_contact">contact</string>
    <string name="about_label_email">Email</string>
    <string name="about_label_google_plus">Google+</string>
    <string name="about_label_twitter">Twitter</string>

    <string name="notification_preface">Drone strike in</string>


    <string name="title_strike_detail">Strike Detail</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="hello_world">Hello world!</string>
    <string name="btn_label_information">More Information...</string>
    <string name="btn_label_previous_strike">Prev</string>
    <string name="btn_label_next_strike">Next</string>

    <string-array name="locations_array">
        <item>Worldwide</item>
        <item>Pakistan</item>
        <item>Yemen</item>
        <item>Somalia</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ABS ViewPager Tabs</string>
    <string name="Fragment1">This is ActionBarSherlock Fragment 1</string>
    <string name="Fragment2">This is ActionBarSherlock Fragment 2</string>
    <string name="Fragment3">This is ActionBarSherlock Fragment 3</string>
    <string name="filler">This is placeholder text</string>
    <string name="temp_action_test">Test notification</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
