<!--
  ~ Copyright 2013 Inderjit Gill
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="io.indy.drone.activity.AboutActivity.AboutFragment"
        >

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical" >


        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView android:text="@string/app_name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="32sp"
                      android:paddingRight="16dp"
                      android:fontFamily="sans-serif"/>

            <TextView android:id="@+id/version"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:padding="0dp"
                      android:fontFamily="sans-serif"
                      tools:text="v1.2.3"/>
        </LinearLayout>

        <TextView android:text="@string/app_description"
                  style="@style/AboutBody"/>

        <TextView style="@style/AboutHeading"
                  android:text="@string/about_label_thanks"/>

        <View   style="@style/AboutSeparator"/>

        <TextView android:text="@string/app_thanks"
                  style="@style/AboutBody"/>

        <TextView style="@style/AboutHeading"
                  android:text="@string/about_label_license"/>

        <View   style="@style/AboutSeparator"/>

        <TextView android:text="@string/app_copyright"
                  style="@style/AboutBody" />

        <TextView android:id="@+id/source_link"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:fontFamily="sans-serif"
                  tools:text="http://github.com/indy/drone"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_license"/>

        <TextView style="@style/AboutHeading"
                  android:text="@string/about_label_third_party_libraries"/>

        <View   style="@style/AboutSeparator"/>

        <TextView android:id="@+id/acknowledgements"
                  style="@style/AboutBody" />

        <TextView style="@style/AboutHeading"
                  android:text="@string/about_label_contact"/>

        <View   style="@style/AboutSeparator"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <TextView
                    android:id="@+id/textLabelEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_label_email"
                    android:paddingTop="6dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="32dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    />


            <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="drone@indy.io"
                    android:layout_alignBaseline="@+id/textLabelEmail"
                    android:layout_toRightOf="@+id/textLabelEmail"
                    android:layout_marginLeft="28dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    />

            <TextView
                    android:id="@+id/textLabelGooglePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:text="@string/about_label_google_plus"
                    android:layout_below="@+id/textLabelEmail"
                    android:layout_alignRight="@+id/textLabelEmail"
                    android:layout_alignEnd="@+id/textLabelEmail"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    />

            <TextView
                    android:id="@+id/textViewGooglePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textLabelGooglePlus"
                    android:layout_below="@+id/textViewEmail"
                    android:layout_alignLeft="@+id/textViewEmail"
                    android:layout_alignStart="@+id/textViewEmail"
                    tools:text="google.com/+InderjitGill"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    />

            <TextView
                    android:id="@+id/textLabelTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:layout_below="@+id/textLabelGooglePlus"
                    android:layout_alignRight="@+id/textLabelGooglePlus"
                    android:layout_alignEnd="@+id/textLabelGooglePlus"
                    android:text="@string/about_label_twitter"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    />

            <TextView
                    android:id="@+id/textViewTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textLabelTwitter"
                    android:layout_below="@+id/textViewGooglePlus"
                    android:layout_alignLeft="@+id/textViewGooglePlus"
                    android:layout_alignStart="@+id/textViewGooglePlus"
                    tools:text="@InderjitGill"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>
