<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Inderjit Gill
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
    </FrameLayout>
    <io.indy.drone.view.FrameLayoutDetails android:id="@+id/details"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.5"
                 android:background="@color/strikecard_map_info_background"
                 tools:context=".StrikeDetailActivity"
                 tools:ignore="MergeRootFrame">

        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:fontFamily="sans-serif"
                        tools:text="Foobar"/>

                <TextView
                        android:id="@+id/happened"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:fontFamily="sans-serif"
                        android:layout_weight="1"
                        android:gravity="right"
                        tools:text="lsdkjf"/>
            </LinearLayout>

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                <!--  style="?android:attr/textAppearanceLarge" -->
                <TextView android:id="@+id/strike_detail"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"

                          android:textSize="16sp"
                          android:padding="8dp"
                          android:fontFamily="sans-serif-light"

                          android:textIsSelectable="false"
                          tools:text="In the first known US targeted assassination using a drone, a CIA Predator struck a car killing six al Qaeda suspects."
                          tools:context=".StrikeDetailFragment" />
            </ScrollView>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/drone_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"

                        android:textSize="16sp"
                        android:padding="8dp"
                        android:fontFamily="sans-serif"

                        android:text="@string/filler"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                    <Button android:id="@+id/btn_previous_strike"

                            android:textSize="16sp"
                            android:padding="8dp"
                            android:fontFamily="sans-serif-light"

                            android:text="@string/btn_label_previous_strike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <Button android:id="@+id/btn_info_link"

                            android:textSize="16sp"
                            android:padding="8dp"
                            android:fontFamily="sans-serif-light"

                            android:text="@string/btn_label_information"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <Button android:id="@+id/btn_next_strike"

                            android:textSize="16sp"
                            android:padding="8dp"
                            android:fontFamily="sans-serif-light"

                            android:text="@string/btn_label_next_strike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </io.indy.drone.view.FrameLayoutDetails>
</LinearLayout>




